# MIDI2Bit

./: .gitignore  Build Anweisung.md  CMakeLists.txt  LICENSE  README.md
midi_examples/: Pokecenter_short - Original.mid  Pokecenter_short.mid  Pokemon Center - Original - DiffrentSound.mid  Pokemon RedBlueYellow - Route 1.mid
my_music/: myMidiSound.mid
src/: MidiStringParser.cpp  MidiStringParser.h  main.cpp  myMidiSound.mid  test_main.cpp
